fix: margin-top for hp-video-section mobile version updated

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1982,7 +1982,7 @@ html, body, .homepage-body {
   }
 
   .hp-video-section {
-    margin-top: 50px;
+    margin-top: 100px;
     padding: 30px 20px 60px 20px;
   }
 
